--- a/exampleSite/data/en/about.yml
+++ b/exampleSite/data/en/about.yml
@@ -1,16 +1,16 @@
 ############################# About ###################################
 about:
   enable : true
-  title : About Us
+  title : Sobre nosotros
   about_item :
-  - icon : ti-ruler-pencil # themify icon pack : https://themify.me/themify-icons
-    title : We're Creative
-    content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos.
+  - icon : ti-mobile # themify icon pack : https://themify.me/themify-icons
+    title : Desarrollo Movil
+    content : Aplicaciones desarrolladas en las ultimas tecnologias moviles, escalables y eficientes multi sistema Android y IOS
 
-  - icon : ti-cup # themify icon pack : https://themify.me/themify-icons
-    title : We're Professional
-    content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos.
+  - icon : ti-desktop # themify icon pack : https://themify.me/themify-icons
+    title : Desarrollo Web
+    content : Lideres en desarrollo web combinando las tecnologias mas actules y 100% personalizable segun tus requerimientos
 
-  - icon : ti-thought # themify icon pack : https://themify.me/themify-icons
-    title : We're Genius
-    content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos.
+  - icon : ti-server # themify icon pack : https://themify.me/themify-icons
+    title : Hosting y Servidores
+    content : Nuestro equipo de profesionales lo hace por ti! Alajamiento y mantenimento de tus aplicaciones tanto web como movil
